# Telegram_Bot

./: README.md
ShellBot/: CMakeLists.txt  main.cpp
ShellBot/inc/: bot_api.h
ShellBot/src/: bot_api.cpp
WeatherBot/: CMakeLists.txt  LICENSE  README.md
WeatherBot/tests/: CMakeLists.txt  course_test.cpp  network_test.cpp  weather_test.cpp
WeatherBot/tgbot_cpp/: CMakeLists.txt  main.cpp
WeatherBot/tgbot_cpp/bot/: bot.cpp  bot.hpp
WeatherBot/tgbot_cpp/bot/bot_inline_keyboard/: bot_inline_keyboard.cpp  bot_inline_keyboard.hpp
WeatherBot/tgbot_cpp/exchange_rate/: ExchangeRate.cpp  ExchangeRate.hpp
WeatherBot/tgbot_cpp/train_info_ns/: TripInformation.cpp  TripInformation.hpp
WeatherBot/tgbot_cpp/weather_forecast/: WeatherForecast.cpp  WeatherForecast.hpp
